atlas/main/default/objects/Carrier__c/fields/Acceptance_Rate__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Rate__c</fullName>
    <label>Acceptance Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>