atlas/main/default/objects/Carrier__c/fields/Blacklist_Reason__c.field-meta.xml
<CustomField>
    <fullName>Blacklist_Reason__c</fullName>
    <label>Blacklist Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>