atlas/main/default/objects/Carrier__c/fields/Bland_AI_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Bland_AI_Contact_ID__c</fullName>
    <label>Bland AI Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>