atlas/main/default/objects/Carrier__c/fields/Claims_Count__c.field-meta.xml
<CustomField>
    <fullName>Claims_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Claims Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>