atlas/main/default/objects/Carrier__c/fields/Communication_Score__c.field-meta.xml
<CustomField>
    <fullName>Communication_Score__c</fullName>
    <label>Communication Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>