atlas/main/default/objects/Carrier__c/fields/Compliance_Override__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliance Override</label>
    <type>Checkbox</type>
</CustomField>