atlas/main/default/objects/Carrier__c/fields/Compliance_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Override_Reason__c</fullName>
    <label>Compliance Override Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>