atlas/main/default/objects/Carrier__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <label>Contact Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>