atlas/main/default/objects/Carrier__c/fields/DOT_Number__c.field-meta.xml
<CustomField>
    <fullName>DOT_Number__c</fullName>
    <label>DOT Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>