atlas/main/default/objects/Carrier__c/fields/Double_Broker_Flag__c.field-meta.xml
<CustomField>
    <fullName>Double_Broker_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Double Broker Flag</label>
    <type>Checkbox</type>
</CustomField>