atlas/main/default/objects/Carrier__c/fields/Equipment_Types__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Types__c</fullName>
    <label>Equipment Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dry Van</fullName>
            </value>
            <value>
                <fullName>Refrigerated (Reefer)</fullName>
            </value>
            <value>
                <fullName>Flatbed</fullName>
            </value>
            <value>
                <fullName>Step Deck</fullName>
            </value>
            <value>
                <fullName>Lowboy</fullName>
            </value>
            <value>
                <fullName>Tanker</fullName>
            </value>
            <value>
                <fullName>Box Truck</fullName>
            </value>
            <value>
                <fullName>Hotshot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>