atlas/main/default/objects/Carrier__c/fields/FMCSA_Last_Verified__c.field-meta.xml
<CustomField>
    <fullName>FMCSA_Last_Verified__c</fullName>
    <label>FMCSA Last Verified</label>
    <type>DateTime</type>
</CustomField>