atlas/main/default/objects/Carrier__c/fields/Insurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Amount__c</fullName>
    <label>Insurance Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>