atlas/main/default/objects/Carrier__c/fields/Insurance_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Expiry__c</fullName>
    <label>Insurance Expiry</label>
    <type>Date</type>
</CustomField>