atlas/main/default/objects/Carrier__c/fields/Last_Called__c.field-meta.xml
<CustomField>
    <fullName>Last_Called__c</fullName>
    <label>Last Called</label>
    <type>DateTime</type>
</CustomField>