atlas/main/default/objects/Carrier__c/fields/Last_Lane__c.field-meta.xml
<CustomField>
    <fullName>Last_Lane__c</fullName>
    <label>Last Lane</label>
    <length>50</length>
    <type>Text</type>
</CustomField>