atlas/main/default/objects/Carrier__c/fields/MC_Number__c.field-meta.xml
<CustomField>
    <fullName>MC_Number__c</fullName>
    <label>MC Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>