atlas/main/default/objects/Carrier__c/fields/On_Time_Delivery_Rate__c.field-meta.xml
<CustomField>
    <fullName>On_Time_Delivery_Rate__c</fullName>
    <label>On-Time Delivery Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>