atlas/main/default/objects/Carrier__c/fields/Out_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out of Service</label>
    <type>Checkbox</type>
</CustomField>