atlas/main/default/objects/Carrier__c/fields/Preferred_Lanes__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Lanes__c</fullName>
    <label>Preferred Lanes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>