atlas/main/default/objects/Carrier__c/fields/Reputation_Score__c.field-meta.xml
<CustomField>
    <fullName>Reputation_Score__c</fullName>
    <label>Reputation Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>