atlas/main/default/objects/Carrier__c/fields/Safety_Rating__c.field-meta.xml
<CustomField>
    <fullName>Safety_Rating__c</fullName>
    <label>Safety Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Satisfactory</fullName>
            </value>
            <value>
                <fullName>Conditional</fullName>
            </value>
            <value>
                <fullName>Unsatisfactory</fullName>
            </value>
            <value>
                <fullName>Unrated</fullName>
                <default>true</default>
                <label>Unrated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>