atlas/main/default/objects/Carrier__c/fields/Stolen_Load_Flag__c.field-meta.xml
<CustomField>
    <fullName>Stolen_Load_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stolen Load Flag</label>
    <type>Checkbox</type>
</CustomField>