atlas/main/default/objects/Carrier__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>America/New_York</fullName>
                <label>Eastern (America/New_York)</label>
            </value>
            <value>
                <fullName>America/Chicago</fullName>
                <default>true</default>
                <label>Central (America/Chicago)</label>
            </value>
            <value>
                <fullName>America/Denver</fullName>
                <label>Mountain (America/Denver)</label>
            </value>
            <value>
                <fullName>America/Los_Angeles</fullName>
                <label>Pacific (America/Los_Angeles)</label>
            </value>
            <value>
                <fullName>America/Anchorage</fullName>
                <label>Alaska (America/Anchorage)</label>
            </value>
            <value>
                <fullName>Pacific/Honolulu</fullName>
                <label>Hawaii (Pacific/Honolulu)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>