atlas/main/default/objects/Carrier__c/fields/Total_Loads_Hauled__c.field-meta.xml
<CustomField>
    <fullName>Total_Loads_Hauled__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Loads Hauled</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>