atlas/main/default/objects/Carrier__c/fields/Whitelisted__c.field-meta.xml
<CustomField>
    <fullName>Whitelisted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Whitelisted (Priority Carrier)</label>
    <type>Checkbox</type>
</CustomField>