atlas/main/default/objects/Carrier__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>ZIP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>